public_html/css/pages/social.scss
@import '../variables/colors';
@import '../variables/sizes';
@import '../variables/mixins';

section.social {
  padding: 20px;

  background: $cs-dark2;
  color: $cs-green4;

  h1 {
    font-family: Aleo;
  }

  &:not(:last-child) {
    border-bottom: 1px dashed $cs-dark6;
  }

  img {
    display: block;
    width: 100%;
    max-width: 30rem;
    max-height: auto;
    margin: 0 auto;
  }

  a:hover {
    text-decoration: none;

    figure figcaption::after {
      width: 100%;
    }
  }

  figure {
    display: flex;
    flex-flow: row wrap;
    align-items: center;

    div {
      flex: 1;
    }

    img {
      max-width: 5rem;
      max-height: auto;
      width: auto;
      height: auto;
      margin: 0 auto;
      padding-right: 20px;

      vertical-align: middle;
    }

    figcaption {
      flex: 7;

      font-size: 2rem;

      &::after {
        content: '';
        display: block;
        position: relative;
        left: -10px;
        // margin: 0 auto;
        width: 0;
        height: 1px;

        background: currentColor;

        transition: width 300ms ease;
      }

      h1 {
        display: inline-block;
        margin: 0;
        padding-right: 1em;
      }

      p {
        display: inline-block;
        margin: 0;
      }
    }
  }


}

